--- a/Higher_Order_function/index.html
+++ b/Higher_Order_function/index.html
@@ -8,8 +8,9 @@
 </head>
 
 <body>
-    <h1>We will learn js closures</h1>
-    <script src="closure.js"></script>
+
+
+    <script src="Higher_Order_Function.js"></script>
 </body>
 
 </html>
