--- a/Prototype_Inheritance_to_class_consept/index.html
+++ b/Prototype_Inheritance_to_class_consept/index.html
@@ -1,15 +1,14 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
 </head>
-
 <body>
-    <h1>We will learn js closures</h1>
-    <script src="closure.js"></script>
+    
+ 
+    <!-- <script src="Class.js"></script> -->
+    <script src="polymorphisom.js"></script>
 </body>
-
 </html>
